# groups-check

./: Cargo.toml  README.md
src/: bin.rs  lib.rs  main.rs
tests/: test1.rs
tests/etc/: group  group-centos7  group-cmrr
