[package]
name = "groups-check"
version = "0.1.0"
edition = "2021"


[lib]
name = "libgroupscheck"
path = "src/lib.rs"

[[bin]]
name = "groups-check"
path = "src/bin.rs"

[dependencies]
sscanf = { version = "0.4.1" }
clap = { version = "4.5.4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "1"
